--- a/SwingEditor/.settings/org.eclipse.core.resources.prefs
+++ b/SwingEditor/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/component/Component.java=UTF-8
+encoding//src/component/RectangleComponent.java=UTF-8
 encoding//src/main/AttributePanel.java=UTF-8
